test/subjects/general/prepostop_error1.php
<?php
	// error: tests/subjects/general/prepostop_error1.php:5: error: Variable name expected
	// return: 2

	f()++;
?>
